# backend/cmd/api/main.go
@@ -3,10 +3,7 @@ package main
 import (
 	_ "backend/docs"
 	"backend/internal/app"
-	"context"
-	"fmt"
 	"log"
-	"time"
 )
 
 // @title Petstore
@@ -15,6 +12,10 @@ import (
 
 // @host localhost:8888
 // @BasePath /
+
+// @securityDefinitions.apiKey ApiKeyAuth
+// @in header
+// @name Authorization
 func main() {
 
 	a, err := app.NewApp()
@@ -27,22 +28,6 @@ func main() {
 	// waiting for a stop signal
 	<-a.Signal()
 
-	// create a context with timeout for graceful shutdown
-	ctx, cancel := context.WithTimeout(context.Background(), 1*time.Second)
-	defer cancel()
-
-	// countdown to make graceful shutdown explicit
-	ticker, secs := time.NewTicker(1*time.Second), 5
-	for {
-		select {
-		// countdown
-		case <-ticker.C:
-			fmt.Printf("%d...\n", secs)
-			secs -= 1
-		// stop server gracefully
-		case <-ctx.Done():
-			fmt.Println("Server stopped gracefully")
-			return
-		}
-	}
+	// graceful shutdown ...
+	_ = a.CloseDBConn()
 }
